--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar-2.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Muskan Goyal</h1>
+          <h1 class="name" title="Richard hanrick">Vinit Goyal</h1>
 
           <p class="title">Tech Freak</p>
         </div>
